Message added and Menu sound Added

--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,10 @@ html {
   background: #10b981;
   border-radius: 4px;
 }
+
+
+@media (pointer: fine) {
+  * {
+    cursor: default !important;
+  }
+}
